--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,35 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- main
-
+- master #change master to something else if master is not your main branch
 pool:
-  vmImage: ubuntu-latest
-
+  vmImage: 'ubuntu-latest'
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '10.x'
+  displayName: 'Install Node.js'
+ 
+- task: Npm@1
+  inputs:
+    command: 'install'
+    verbose: true
+  displayName: 'Install npm package'
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    customCommand: 'run build validate $(Build.Repository.LocalPath) /subscriptions/953a158a-7768-4a35-9102-bdf7ceeb2348/resourceGroups/resgrp/providers/Microsoft.DataFactory/factories/adf-new-vin '
+  displayName: 'Validate'
+ 
+# Validate and then generate the ARM template into the destination folder. Same as clicking "Publish" from UX
+# The ARM template generated is not published to the ‘Live’ version of the factory. Deployment should be done using a release pipeline.
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    customCommand: 'run build export $(Build.Repository.LocalPath) /subscriptions/<953a158a-7768-4a35-9102-bdf7ceeb2348>/resourceGroups/resgrp/providers/Microsoft.DataFactory/factories/adf-new-vin "ArmTemplate"'
+  displayName: 'Validate and Generate ARM template'
+ 
+# Publish the Artifact to be used as a source for a release pipeline
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.Repository.LocalPath)/ArmTemplate'
+    artifact: 'ArmTemplates'
+    publishLocation: 'pipeline'
